--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Subdomain</h1>
+    <style>
+      background-color: blue;
+      color: #fff;
+    </style>
+  </body>
+</html>
