--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <body>
     <h1>Subdomain</h1>
     <style>
+      body {
       background-color: blue;
       color: #fff;
+      }
     </style>
   </body>
 </html>
